--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
   },
   "homepage": "https://github.com/five1star/BOILER_TS_EXPRESS_TYPEORM#readme",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
+    "@types/morgan": "^1.9.2",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "ts-node": "^9.0.0",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
