--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
     "lib": ["es5", "es6"],
     "target": "es6",
+    "outDir": "dist",
     "module": "commonjs",
     "moduleResolution": "node",
+    "sourceMap": true,
+    "noImplicitAny": false,
+    "esModuleInterop": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true,
-    "paths": {"*": ["node_modules/*"]},
-    "noImplicitAny": false
+    "paths": {"*": ["node_modules/*"]}
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
