--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my own boilerplate",
   "main": "index.js",
   "scripts": {
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "start": "node dist/index.js",
     "start:dev": "nodemon src/index.ts",
     "build": "tsc -p ."
@@ -29,8 +30,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
     "typeorm": "^0.2.29"
   },
@@ -38,6 +41,8 @@
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "nodemon": "^2.0.6",
+    "ts-node-dev": "^1.0.0",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.2"
   }
 }
